Changed from baththesis to an article style
Used among other things the following perl:

[teg@lianli thesis]$ perl -pi -w -e 's/\\subsection/\\subsubsection/g;' *.tex global_reductions/*.tex
[teg@lianli thesis]$ perl -pi -w -e 's/\{subsection/\{subsubsection/g;' *.tex global_reductions/*.tex
[teg@lianli thesis]$ perl -pi -w -e 's/\\section/\\subsection/g;' *.tex global_reductions/*.tex
[teg@lianli thesis]$ perl -pi -w -e 's/\{section/\{subsection/g;' *.tex global_reductions/*.tex
[teg@lianli thesis]$ perl -pi -w -e 's/\\chapter/\\section/g;' *.tex global_reductions/*.tex
[teg@lianli thesis]$ perl -pi -w -e 's/\{chapter/\{section/g;' *.tex global_reductions/*.tex

--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -1,6 +1,6 @@
 
 %====================
-\chapter{Atomic Flows}
+\section{Atomic Flows}
 
 In this chapter we introduce the main contribution of this thesis, a geometric, bureaucracy-free formalism, called `atomic flows'. An atomic flow is a directed graph obtained from a derivation by only retaining information about the creation and destruction of atom occurrences. Atomic flows are, essentially, specialised Buss flow graphs \cite{Buss:91:The-Unde:uq,Carb:97:Interpol:fk}. Notably, the atomic flow of a derivation completely disregards all the logical relations and associated inference rule instances; so, an atomic flow is not a derivation, but only a very abstract representation of it.
 
@@ -429,7 +429,7 @@ Given an atomic flow $\phi$ and a polarity assignment $\pi$ for $\phi$, the pola
 %---------------
 
 %=======================================================
-\section{Paths and Cycles}\label{section:PathsAndCycles}
+\subsection{Paths and Cycles}\label{subsection:PathsAndCycles}
 
 We now define the notions of `path', `$\ai$-path' and `$\ai$-cycle' in atomic flows. Paths are sequences of adjacent edges that only `go down' or only `go up'; $\ai$-paths are formed by joining paths at interaction or cointeraction vertices; $\ai$-cycles are circular $\ai$-paths.
 
@@ -468,7 +468,7 @@ In addition, the flow has the paths and $\ai$-paths obtained from the shown ones
 \end{example}
 
 %=========================================
-\section{Subflows}\label{section:Subflows}
+\subsection{Subflows}\label{subsection:Subflows}
 
 \TODO{Give examples.}
 
