--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -1,6 +1,6 @@
-\chapter{Atomic Flows and Derivations}\label{chapter:FlowsAndDerivations}
+\section{Atomic Flows and Derivations}\label{section:FlowsAndDerivations}
 
-\section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
+\subsection{Extracting Flows from Derivations}\label{subsection:ExtractingFlowsFromDerivations}
 
 We now define the mapping from derivations to atomic flows. As we said, the idea is that structural rule instances map to the respective atomic-flow vertices, and the edges trace the atom occurrences between rule instances. We first state a fact, whose proof is immediate.
 
@@ -357,7 +357,7 @@ whose flow is $\phi$.
 %----------
 
 %=================================================================
-\section{A Normal Form of Derivation}\label{section:DerNormalForm}
+\subsection{A Normal Form of Derivation}\label{subsection:DerNormalForm}
 
 In this section we introduce the \emph{$\ai$-decomposed form} of a derivation. The reason for introducing this normal form is that we will often find it convenient to assume that identity instances appear at the top and cut instances appear at the bottom of a derivation. The important features of this normal form is that a derivation can be transformed into $\ai$-decomposed form without changing its atomic flow, and without significantly changing its size.
 
