--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,12 +1,12 @@
-\chapter{Conclusions}
+\section{Conclusions}
 
-\section{Future Work}
+\subsection{Future Work}
 
-\subsection{Polynomial Streamlining}
+\subsubsection{Polynomial Streamlining}
 
-\subsection{Modal Logics}
+\subsubsection{Modal Logics}
 
-\subsection{Formalism B}
+\subsubsection{Formalism B}
 
 %---------------------------------------
 \begin{proposition}\label{proposition:FlowUniqueFormalismB}
