--- a/global_reductions/multiple_isolated_subflow.tex
+++ b/global_reductions/multiple_isolated_subflow.tex
@@ -6,7 +6,7 @@ We will see later how a derivation containing $2n$ atoms can be weakly streamlin
 
 The operator is defined in terms of the following flow reduction. Unlike the flow reductions of the preceeding sections, we here present a reductions which depends on several parameters.
 
-In Subsection~\vref{subsection:ThresholdFormulae}, we present one possible combination of valid parameters, which yeields quasipolynomial streamlining. We conjecture that by finding different parameters we will be able to obtain more efficient versions of this reduction. In particular, we hope to be able to obtain polynomial streamlining.
+In Subsection~\vref{subsubsection:ThresholdFormulae}, we present one possible combination of valid parameters, which yeields quasipolynomial streamlining. We conjecture that by finding different parameters we will be able to obtain more efficient versions of this reduction. In particular, we hope to be able to obtain polynomial streamlining.
 
 \newcommand{\Gammasf}{\mathsf\Gamma}
 %----------------------------------
