--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -1,4 +1,4 @@
-\subsection{Threshold Formulae}\label{subsection:ThresholdFormulae}
+\subsubsection{Threshold Formulae}\label{subsubsection:ThresholdFormulae}
 
 Recently, Je\v r\'abek showed that cut-free $\SKS$ proofs can be constructed in quasipolynomial time from $\SKS$ proofs with cut \cite{Jera::On-the-C:kx}. This is a very surprising result because received wisdom suggests that cut elimination requires exponential-time normalisation, as is the case in Gentzen proof systems. Je\v r\'abek obtained his result by relying on a construction over threshold functions by Atserias, Galesi and Pudl\'ak, in the monotone sequent calculus \cite{AtseGalePudl:02:Monotone:yu}. We note that the monotone sequent calculus specifies a weaker logic than propositional logic because negation is not freely applicable.
 
