--- a/main_result.tex
+++ b/main_result.tex
@@ -1,4 +1,4 @@
-\chapter{Main Result}\label{chapter:MainResult}
+\section{Main Result}\label{section:MainResult}
 
 We now present the main result of this thesis: Three procedures for obtaining weakly streamlined derivations. Corollaries of the main results are: cut elimination, super-streamlining and hyper-streamlining.
 
