--- a/formalism.tex
+++ b/formalism.tex
@@ -1,4 +1,4 @@
-\chapter{Propositional Classical Logic}\label{chapter:PropositionalClassicalLogic}
+\section{Propositional Classical Logic}\label{section:PropositionalClassicalLogic}
 
 The traditional formalism in deep inference is \emph{the calculus of structures} \cite{Gugl:06:A-System:kl}.
 
@@ -6,7 +6,7 @@ The traditional formalism in deep inference is \emph{the calculus of structures}
 
 The idea of a new formalism, named \emph{formalism A} based on the calculus of structures, but where derivations contain less bureaucracy, was proposed by Guglielmi in \cite{Gugl:04:Formalis:am}, and later Br\"{u}nnler and Lengrand developed a term calculus around these ideas \cite{BrunLeng:05:On-Two-F:jf}.
 
-In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsection:ThresholdFormulae}).
+In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsubsection:ThresholdFormulae}).
 
 After presenting the functorial calculus we compare it briefly with the calculus of structures before we introduce the standard deductive system for classical logic in deep inference and show some preliminary results.
 
@@ -45,7 +45,7 @@ An \emph{inference rule}\index{inference rule} $\rho$ is an expression $\vlinf{\
 %---------------
 
 %==================================================================
-\section{The Functorial Calculus}\label{section:FunctorialCalculus}
+\subsection{The Functorial Calculus}\label{subsection:FunctorialCalculus}
 
 We now present the functorial calculus in the context of classical propositional logic and give some basic results.
 
@@ -386,7 +386,7 @@ Given derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma
 %-------------
 
 %=======================================================================
-\section{The Calculus of Structures}\label{section:CalculusOfStructures}
+\subsection{The Calculus of Structures}\label{subsection:CalculusOfStructures}
 
 We now present the calculus of structures and in Theorems~\ref{theorem:CoSToFunc} and \ref{theorem:FuncToCoS} we show that the functorial calculus and the calculus of structures polynomially simulate each other.
 
