--- a/sks.tex
+++ b/sks.tex
@@ -1,6 +1,6 @@
 \newcommand{\SKS}{\mathsf{SKS}}
 
-\section{System SKS}
+\subsection{System SKS}
 
 We now define the standard deductive system for classical propositional logic in deep inference $\SKS$\index{$\SKS$} \cite{Brun:03:Atomic-C:oz,Brun:06:Cut-Elim:cq,Brun:06:Locality:zh,BrunTiu:01:A-Local-:mz}. For an excellent reference to previous work on normalisation in $\SKS$, see \cite{Brun:04:Deep-Inf:rq}. Subsystems of $\SKS$ are used throughout this thesis.
 
@@ -70,7 +70,7 @@ and the \emph{invertible}\index{inference rule!invertible} (\emph{logical}) rule
 \]
 \end{definition}
 
-The calculus of structures and system $\SKS$ were originally defined in terms of equivalence classes of formulae, called `structures', and without the above invertible logical rules. However, we find it more convenient to use formulae instead, since it makes it simpler to `trace atom occurrences', which we will see in Section~\ref{section:ExtractingFlowsFromDerivations}. We now show that the two approaches are morally the same.
+The calculus of structures and system $\SKS$ were originally defined in terms of equivalence classes of formulae, called `structures', and without the above invertible logical rules. However, we find it more convenient to use formulae instead, since it makes it simpler to `trace atom occurrences', which we will see in Section~\ref{subsection:ExtractingFlowsFromDerivations}. We now show that the two approaches are morally the same.
 
 %------------------------------------------------------
 \begin{definition}\label{definition:EquivalenceRelation}
